# n2a2ui

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md
.github/workflows/: ci-live.yml  coverage.yml  unit-test.yml
crates/a2ui/: Cargo.toml
crates/a2ui/schemas/v0_9/: block_catalog.json
crates/a2ui/src/: lib.rs
crates/a2ui/src/v0_9/: block_catalog.rs  common.rs  message.rs  mod.rs  surface.rs
crates/a2ui/tests/: schema.rs
crates/n2a2ui/: Cargo.toml
crates/n2a2ui-a2ui/: Cargo.toml
crates/n2a2ui-a2ui/schemas/v0_9/: block_catalog.json  notion_block_catalog.json
crates/n2a2ui-a2ui/src/: lib.rs
crates/n2a2ui-a2ui/src/v0_9/: block_catalog.rs  common.rs  mod.rs
crates/n2a2ui-a2ui/tests/: schema.rs
crates/n2a2ui/src/: client.rs  lib.rs
crates/n2a2ui/src/convert/: color.rs  mod.rs  rich_text.rs  tests.rs
crates/n2a2ui/tests/: convert_block.rs  live_convert_block.rs
crates/notion-to-a2ui/: Cargo.toml
crates/notion-to-a2ui/src/: client.rs  id.rs
crates/notion-to-a2ui/src/convert/: mod.rs  rich_text.rs
crates/notion-to-a2ui/tests/: convert_block.rs
