[workspace]
resolver = "3"
members = ["crates/a2ui", "crates/notion-to-a2ui"]

[workspace.package]
edition = "2024"
authors = ["Ikuma Yamashita"]
license = "MIT"
repository = "https://github.com/46ki75/notion-to-a2ui"

[workspace.dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.149"
indexmap = { version = "2", features = ["serde"] }
