[workspace]
resolver = "3"
members = ["crates/a2ui", "crates/n2a2ui"]

[workspace.package]
edition = "2024"
authors = ["Ikuma Yamashita"]
license = "MIT"
repository = "https://github.com/46ki75/n2a2ui"

[workspace.dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.149"
indexmap = { version = "2", features = ["serde"] }
async-stream = "0.3"
