[package]
name = "n2a2ui"
version = "0.1.0"
description = "Convert Notion blocks into A2UI v0.9 components (Elmethis Block Catalog)."
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories = ["web-programming", "parsing", "data-structures"]
keywords = ["notion", "a2ui"]
readme = "../../README.md"

[lints]
workspace = true

[dependencies]
a2ui = { path = "../a2ui", version = "0.1" }
async-stream = { workspace = true }
futures = "0.3.32"
html-meta-scraper = "^0.3"
imagesize = "0.14"
indexmap = { workspace = true }
infer = "0.19.0"
notionrs = "0.27.0"
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "http2",
    "gzip",
] }
serde = { workspace = true }
thiserror = "2"
url = "2.5"

[dev-dependencies]
dotenvy = "0.15.7"
serde_json = { workspace = true }
tokio = { version = "1.52.3", features = ["full"] }
